<resources>
    <string name="app_name">iclub</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <color name="white" >#fff1ff</color>
    <color name="whiteOne" >#b0c5ec</color>
    <color name="textColor9a4274">#9a4274</color>
    <color name="textColor2f967a">#2f967a</color>
    <color name="textColorc979a8">#c979a8</color>
    <color name="textColor242424">#242424</color>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="area">"全部"a"0":"全部";"热门城市"a"1":"北京","3":"上海","213":"广州","214":"深圳","248":"成都","99":"杭州","86":"南京","2":"天津","182":"武汉","4":"重庆";"北京"a"1":"北京";"天津"a"2":"天津";"上海"a"3":"上海";"重庆"a"4":"重庆";"河北"a"10":"保定","7":"秦皇岛","6":"唐山","5":"石家庄","15":"衡水","9":"邢台","8":"邯郸","13":"沧州","14":"廊坊","11":"张家口","12":"承德";"山西"a"21":"朔州","20":"晋城","19":"长治","22":"晋中","17":"大同","23":"运城","18":"阳泉","24":"忻州","25":"临汾","16":"太原","26":"吕梁";"台湾"a"49":"花莲","48":"台东","45":"高雄","44":"台南","47":"澎湖","46":"屏东","35":"宜兰","36":"桃园","33":"嘉义","34":"台北","39":"台中","27":"台北","28":"高雄","37":"新竹","29":"基隆","38":"苗栗","43":"嘉义","30":"台中","42":"云林","41":"南投","32":"新竹","40":"彰化","31":"台南";"辽宁"a"59":"辽阳","58":"阜新","57":"营口","56":"锦州","55":"丹东","51":"大连","52":"鞍山","62":"朝阳","53":"抚顺","63":"葫芦岛","54":"本溪","60":"盘锦","61":"铁岭","50":"沈阳";"吉林"a"67":"辽源","66":"四平","69":"白山","68":"通化","64":"长春","70":"松原","65":"吉林","71":"白城","72":"延边";"黑龙江"a"79":"伊春","78":"大庆","77":"鸡西","82":"七台河","83":"黑河","80":"牡丹江","81":"佳木斯","73":"哈尔滨","74":"齐齐哈尔","75":"鹤岗","84":"绥化","85":"大兴安岭","76":"双鸭山";"江苏"a"98":"宿迁","97":"泰州","96":"镇江","95":"扬州","94":"盐城","93":"淮安","92":"连云港","91":"南通","90":"苏州","86":"南京","87":"无锡","88":"徐州","89":"常州";"浙江"a"109":"丽水","108":"台州","107":"舟山","106":"衢州","105":"金华","104":"绍兴","103":"湖州","102":"嘉兴","99":"杭州","101":"温州","100":"宁波";"安徽"a"125":"池州","116":"铜陵","126":"宣城","117":"安庆","114":"马鞍山","115":"淮北","112":"蚌埠","121":"宿州","122":"巢湖","113":"淮南","123":"六安","110":"合肥","124":"亳州","111":"芜湖","118":"黄山","119":"滁州","120":"阜阳";"福建"a"134":"龙岩","135":"宁德","132":"漳州","127":"福州","133":"南平","128":"厦门","131":"泉州","129":"莆田","130":"三明";"江西"a"143":"吉安","144":"宜春","145":"抚州","146":"上饶","138":"萍乡","139":"九江","136":"南昌","137":"景德镇","140":"新余","142":"赣州","141":"鹰潭";"山东"a"147":"济南","148":"青岛","149":"淄博","159":"临沂","158":"莱芜","157":"日照","156":"威海","155":"泰安","154":"济宁","161":"聊城","152":"烟台","162":"滨州","153":"潍坊","163":"菏泽","150":"枣庄","151":"东营","160":"德州";"河南"a"179":"周口","178":"信阳","169":"鹤壁","177":"商丘","176":"南阳","166":"洛阳","165":"开封","168":"安阳","167":"平顶山","170":"新乡","180":"驻马店","171":"焦作","181":"济源","164":"郑州","174":"漯河","175":"三门峡","172":"濮阳","173":"许昌";"湖北"a"195":"天门","188":"鄂州","194":"仙桃","187":"襄樊","197":"神农架","196":"潜江","189":"荆门","191":"黄冈","190":"孝感","193":"随州","192":"咸宁","182":"武汉","198":"恩施","183":"黄石","184":"十堰","185":"荆州","186":"宜昌";"湖南"a"211":"娄底","202":"衡阳","212":"湘西","203":"邵阳","204":"岳阳","205":"常德","210":"怀化","200":"株洲","201":"湘潭","206":"张家界","207":"益阳","208":"郴州","209":"永州","199":"长沙";"广东"a"220":"湛江","221":"茂名","222":"肇庆","223":"惠州","215":"珠海","224":"梅州","225":"汕尾","216":"汕头","226":"河源","213":"广州","230":"中山","227":"阳江","214":"深圳","228":"清远","219":"江门","229":"东莞","217":"韶关","218":"佛山","232":"揭阳","231":"潮州","233":"云浮";"甘肃"a"240":"张掖","241":"平凉","239":"武威","245":"陇南","244":"定西","234":"兰州","243":"庆阳","242":"酒泉","236":"白银","235":"金昌","247":"甘南","238":"嘉峪关","246":"临夏","237":"天水";"四川"a"262":"达州","263":"雅安","250":"攀枝花","260":"宜宾","251":"泸州","261":"广安","252":"德阳","258":"南充","257":"乐山","268":"凉山","259":"眉山","267":"甘孜","249":"自贡","254":"广元","266":"阿坝","248":"成都","253":"绵阳","265":"资阳","256":"内江","264":"巴中","255":"遂宁";"贵州"a"275":"黔西","276":"黔东","277":"黔南","270":"六盘水","269":"贵阳","272":"安顺","271":"遵义","274":"毕节","273":"铜仁";"海南"a"294":"保亭","281":"琼海","293":"陵水","280":"五指山","295":"琼中","290":"白沙","285":"东方","284":"万宁","292":"乐东","283":"文昌","291":"昌江","282":"儋州","288":"屯昌","289":"临高","286":"澄迈","278":"海口","287":"定安","279":"三亚";"云南"a"300":"昭通","302":"思茅","301":"丽江","304":"文山","303":"临沧","306":"西双版纳","305":"红河","308":"大理","296":"昆明","307":"楚雄","310":"怒江","311":"迪庆","309":"德宏","297":"曲靖","298":"玉溪","299":"保山";"青海"a"318":"玉树","319":"海西","316":"海南","317":"果洛","314":"海北","315":"黄南","312":"西宁","313":"海东";"陕西"a"327":"榆林","328":"安康","329":"商洛","323":"咸阳","324":"渭南","325":"延安","326":"汉中","320":"西安","321":"铜川","322":"宝鸡";"广西"a"338":"玉林","339":"百色","332":"桂林","341":"河池","342":"来宾","333":"梧州","343":"崇左","330":"南宁","331":"柳州","336":"钦州","337":"贵港","334":"北海","335":"防城","340":"贺州";"西藏"a"349":"阿里","344":"拉萨","345":"那曲","346":"昌都","350":"林芝","347":"山南","348":"日喀则";"宁夏"a"353":"吴忠","352":"石嘴山","355":"中卫","354":"固原","351":"银川";"新疆"a"370":"阜康","371":"米泉","372":"博乐","373":"伊宁","361":"五家渠","362":"吐鲁番","360":"图木舒克","366":"和田","365":"哈密","364":"喀什","363":"阿克苏","375":"塔城","357":"克拉玛依","374":"奎屯","369":"昌吉","356":"乌鲁木齐","377":"阿勒泰","368":"库尔勒","359":"阿拉尔","376":"乌苏","358":"石河子","367":"阿图什";"内蒙古"a"379":"包头","378":"呼和浩特","389":"阿拉善","388":"兴安","387":"锡林郭勒","386":"乌兰察布","385":"巴彦淖尔","383":"鄂尔多斯","384":"呼伦贝尔","381":"赤峰","382":"通辽","380":"乌海";"澳门"a"390":"澳门";"香港"a"391":"香港"</string>

    <string name="position">"0":"全部","-1":"影视制作","1":"编剧","2":"摄影师","3":"后期制作","4":"影视配音","5":"道具师","6":"化妆师","7":"导演","8":"灯光师","9":"助理","-1":"音乐制作":"10":"填词作曲","11":"编曲","12":"录音师","13":"乐手","14":"唱片制作","15":"音乐配音","16":"后期制作","17":"音效师","-1":"演艺人才":"18":"临时演员","19":"Dancer","20":"Singer","21":"魔术师","22":"主持人","23":"模特礼仪","24":"DJ","25":"杂技师","26":"演讲师","-1":"艺术人才":"27":"钢琴","28":"指挥家","29":"小提琴","30":"芭蕾舞","31":"国标舞","32":"管弦乐","33":"声乐视唱","34":"打击乐","35":"吉他","36":"民族乐器","-1":"其它","37":"其他"</string>

    <string
        name="title_activity_role">RoleActivity</string>
    <string name="title_activity_role_talents">roleTalentsActivity</string>
    <string name="title_activity_resume">ResumeActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_up_image">UpImageActivity</string>
    <string name="title_activity_pinned_section_list">PinnedSectionListActivity</string>

    <!--main-->
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>
    <string name="title_activity_crama">CramaActivity</string>
    <string name="title_activity_resume_message">ResumeMessageActivity</string>
    <string name="title_activity_add_resume">AddResumeActivity</string>
    <string name="title_activity_resume_list_particular">ResumeListParticularActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_amend_psw">AmendPswActivity</string>
    <string name="title_activity_amend_about">AmendAboutActivity</string>
    <string name="title_activity_about_function">AboutFunctionActivity</string>
    <string name="title_activity_merchant_jion">MerchantJionActivity</string>
    <string name="title_activity_merchant">MerchantActivity</string>
    <string name="title_activity_add_recruitment">AddRecruitmentActivity</string>
    <string name="title_activity_experience_work">ExperienceWorkActivity</string>
    <string name="title_activity_company_edit">CompanyEditActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_company_invite_message">CompanyInviteMessageActivity</string>
    <string name="title_activity_cooperation_comment">CooperationCommentActivity</string>




    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>


    <string name="star_bright">★</string>
    <string name="star_hidden">☆</string>
    <string name="up_arrow">∧</string>
    <string name="down_arrow">∨</string>



    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="title_activity_failure_comment">FailureCommentActivity</string>
    <string name="title_activity_detailed_information">DetailedInformationActivity</string>
    <string name="title_activity_company_message">CompanyMessageActivity</string>
    <string name="title_activity_iclub_about">IclubAboutActivity</string>
    <string name="title_activity_merchant_job_particular">MerchantJobParticularActivity</string>
    <string name="title_activity_next_resume">NextResumeActivity</string>
    <string name="title_activity_adea_about">AdeaAboutActivity</string>
    <string name="title_activity_bound_phone">BoundPhoneActivity</string>


</resources>
