<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_fastscroll"
        android:showAsAction="never"
        android:title="@string/action_fastscroll"
        android:checkable="true"/>

    <item
        android:id="@+id/action_addpadding"

        android:title="@string/action_addpadding"
        android:checkable="true"/>

    <item
        android:id="@+id/action_showShadow"

        android:title="@string/action_showShadow"
        android:checkable="true"/>
    
    <item
        android:id="@+id/action_showHeaderAndFooter"

        android:title="@string/action_showHeaderAndFooter"
        android:checkable="true"/>

    <item
        android:id="@+id/action_updateDataset"

        android:title="@string/action_updateDataset"
        />

</menu>